--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,3 +15,6 @@ dotenv = "0.15"
 uuid = { version = "1", features = ["v4", "serde"] }
 printpdf = "0.6"
 anyhow = "1"
+utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
+utoipa-swagger-ui = { version = "7", features = ["axum"] }
+argon2 = "0.5"
