feat: html invoice templates, line-item mode, and templates UI

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -31,6 +31,9 @@ WORKDIR /app
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
+    wkhtmltopdf \
+    fonts-dejavu-core \
+    fontconfig \
     && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /app/target/release/backend /app/backend
