--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,9 +13,9 @@ sea-orm-migration = { version = "0.12", default-features = false, features = ["s
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 uuid = { version = "1", features = ["v4", "serde"] }
-printpdf = "0.6"
 anyhow = "1"
 utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
 utoipa-swagger-ui = { version = "7", features = ["axum"] }
 argon2 = "0.5"
 tower-http = { version = "0.5", features = ["cors"] }
+handlebars = "5"
