--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,3 +21,4 @@ tower-http = { version = "0.5", features = ["cors"] }
 handlebars = "5"
 aws-config = "1"
 aws-sdk-s3 = "1"
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
